--- a/webapps/frontend/ui/admin/client/scripts/pages/userCreate.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/userCreate.html
@@ -129,7 +129,7 @@
         </div>
 
         <div class="form-group row">
-          <div class="col-sm-8 offset-sm-4 col-md-10 offset-sm-2 text-right">
+          <div class="col-sm-8 offset-sm-4 col-md-10 offset-md-2 text-right">
             <a class="btn btn-link"
                href="#/users">{{ 'USERS_CANCEL' | translate }}</a>
 
